Update README with project details and setup instructions
Added detailed project overview, features, technologies, and instructions for running the JavaFX clinic appointment management system.